feat: link real PDFs and setup logo images

--- a/index.html
+++ b/index.html
@@ -706,10 +706,10 @@
             <div class="container mx-auto px-6 grid md:grid-cols-4 gap-16">
                 <div class="col-span-2">
                     <div class="flex items-center gap-2 mb-6">
-                        <!-- Large Tree Icon in Footer -->
-                        <!-- Large Tree Icon in Footer -->
-                        <span class="material-symbols-outlined text-brandGreen text-9xl font-bold">park</span>
-                        <span class="text-3xl font-black tracking-tighter text-white uppercase">ECOAID</span>
+                        <!-- Footer Logo Replacement -->
+                        <img src="/images/logo-footer.png" alt="EcoAid"
+                            class="h-24 w-auto object-contain brightness-0 invert opacity-80"
+                            onerror="this.onerror=null; this.src='https://placehold.co/200x80/white/054d2e?text=ECOAID&font=roboto';">
                     </div>
                     <p class="text-white/60 max-w-sm font-bold leading-relaxed">Transformamos el plástico post-consumo
                         en textiles de alta calidad para un futuro circular y responsable.</p>
