fix: increase footer logo size and force cache bust

--- a/index.html
+++ b/index.html
@@ -707,8 +707,8 @@
                 <div class="col-span-2">
                     <div class="flex items-center gap-2 mb-6">
                         <!-- Footer Logo Replacement -->
-                        <img src="/images/logo-footer.png" alt="EcoAid"
-                            class="h-24 w-auto object-contain brightness-0 invert opacity-80"
+                        <img src="/images/logo-footer.png?v=2" alt="EcoAid"
+                            class="h-48 w-auto object-contain brightness-0 invert opacity-80"
                             onerror="this.onerror=null; this.src='https://placehold.co/200x80/white/054d2e?text=ECOAID&font=roboto';">
                     </div>
                     <p class="text-white/60 max-w-sm font-bold leading-relaxed">Transformamos el plástico post-consumo
