fix: navbar logo transparency and add favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 
 <body class="text-everglade overflow-x-hidden antialiased bg-bg">
@@ -28,8 +29,8 @@
                 <div class="flex items-center gap-8">
                     <div class="flex items-center gap-2">
                         <!-- Logo Image Replacement -->
-                        <img src="/images/logo-nav.png?v=5" alt="EcoAid"
-                            class="h-12 w-auto object-contain hover:scale-105 transition-transform">
+                        <img src="/images/logo-nav.png?v=6" alt="EcoAid"
+                            class="h-12 w-auto object-contain hover:scale-105 transition-transform mix-blend-multiply">
                     </div>
                     <nav class="hidden lg:flex gap-6 text-sm font-semibold text-muted">
                         <a class="hover:text-brandGreen transition-colors" href="#">Tela RPET</a>
