fix: update hero image to larger svg

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                     </div>
                     <div class="relative hero-image-container flex justify-center items-center">
                         <!-- Hero Image Replacement -->
-                        <img src="/images/hero section image.png" alt="Rollos de tela ecológica"
-                            class="w-full h-auto object-contain max-h-[700px]">
+                        <img src="/images/hero section image.svg" alt="Rollos de tela ecológica"
+                            class="w-full h-auto object-contain max-h-[850px] hover:scale-105 transition-transform duration-700">
                     </div>
                 </section>
 
