feat: update product grid with real SVGs and content

--- a/index.html
+++ b/index.html
@@ -276,45 +276,96 @@
                         </div>
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12" id="catalog-grid">
+                        <!-- Gorras -->
                         <div class="group catalog-item" data-category="gorras">
                             <div
-                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-100 shadow-sm border border-gray-100 relative">
-                                <img alt="Recycled baseball cap"
-                                    class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
-                                    src="https://lh3.googleusercontent.com/aida-public/AB6AXuBaR24T5oQF_-hhsFcfyck13q0tP8VZZTCmjl4ioCHDdFUwMbqfMApG2JfewfwrFOPvrCH1C-ZJP2InnHKK76IipxhNsZVlKUogakmkPag68zGE_awE7mDCNcOvT2-jhxNnLT1EAfixLF2Rr1esmi_uLLvErmknFMz2z9wE0VEDs3ldzIhGtQ-a-3DscY_k4aFLv5ezhIrz6-Y6eZoXqp_WYUN_tvLXfCY3IoknMa6QQrCPUGRB2meZb6f62NIGxLrJgb5cUlcX5jw" />
+                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-50 shadow-sm border border-gray-100 relative p-8 flex items-center justify-center">
+                                <img alt="Gorra Ecoaid Vista Lateral"
+                                    class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-700 mixture-multiply"
+                                    src="/images/Productos Ecoaid/gorra-ecoaid-vista-lateral.svg" />
                             </div>
-                            <h4 class="font-bold text-xl mb-1 text-text">Gorras RPET Premium</h4>
-                            <p class="text-sm text-gray-500 font-bold">Personalización completa para marcas</p>
+                            <h4 class="font-bold text-xl mb-1 text-text">Gorra Ecoaid</h4>
+                            <p class="text-sm text-gray-500 font-bold">Vista lateral detalles</p>
                         </div>
-                        <div class="group catalog-item" data-category="bolsas">
-                            <div
-                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-100 shadow-sm border border-gray-100 relative">
-                                <img alt="Recycled tote bag"
-                                    class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
-                                    src="https://lh3.googleusercontent.com/aida-public/AB6AXuBnwPiq6VHhA6fwxUIyQ0nyR5ySwuPHOHKHM8ECJ68UdNQmbW5ZrYAVK2i43SPNkomto_bb8kDPNnxgDFZ9FjWnO3ebT-u1ma6Afeg6S1xvRV3F_rRSY2s8n54_NZAqZVa28WnueuvZTGBzX_qKpn8I-ZOdMeqIMarP-XAyU-MjHofgIsTa9mwJRl3lioCN5WWJai-_REov7LAt4wztCIDiX1hF8oQtT4a1JXxs__aKgO4lg4ye9nI0fIwSvXDG3mRmKt3BKbIkTnQ" />
-                            </div>
-                            <h4 class="font-bold text-xl mb-1 text-text">Bolsas Promocionales</h4>
-                            <p class="text-sm text-gray-500 font-bold">Sarga de alta resistencia técnica</p>
-                        </div>
+
+                        <!-- Mochilas / Morrales -->
                         <div class="group catalog-item" data-category="mochilas">
                             <div
-                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-100 shadow-sm border border-gray-100 relative">
-                                <img alt="Recycled backpack"
-                                    class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
-                                    src="https://lh3.googleusercontent.com/aida-public/AB6AXuBvjuTY9JpFuOLizp62JBIU_yekdAQKc6wi91ErIidCVJ9tJiawf1w3rOJwm-ic1sdFqyWeTjOnbyyB6J8R33pVm7bmZvlNYZ52IMy9RshYfMWmhrvOmqs5jHFBaE_fNgsqIt5Nh2YRG5heJgzmasxQ0QMq2FU0t9qdAib5IW4vbKxx1K7J1sFi5PZreVv94msf9wM3zxDu1IZqRzfaqKYdqvQ4zbtbUBrSFmDiXfRiXFot_uUS23jtsT9TwarCJyl-FuGZd0_aOwE" />
+                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-50 shadow-sm border border-gray-100 relative p-8 flex items-center justify-center">
+                                <img alt="Morral Azul Reciclado"
+                                    class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-700 mixture-multiply"
+                                    src="/images/Productos Ecoaid/morral-azul-ciclado.svg" />
                             </div>
-                            <h4 class="font-bold text-xl mb-1 text-text">Mochilas Corporativas</h4>
-                            <p class="text-sm text-gray-500 font-bold">Loneta 100% Reciclada GRS</p>
+                            <h4 class="font-bold text-xl mb-1 text-text">Morral Azul</h4>
+                            <p class="text-sm text-gray-500 font-bold">Diseño ciclado</p>
                         </div>
+
+                        <div class="group catalog-item" data-category="mochilas">
+                            <div
+                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-50 shadow-sm border border-gray-100 relative p-8 flex items-center justify-center">
+                                <img alt="Morral Azul con Nombres"
+                                    class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-700 mixture-multiply"
+                                    src="/images/Productos Ecoaid/morral-azul-nombres.svg" />
+                            </div>
+                            <h4 class="font-bold text-xl mb-1 text-text">Morral Personalizado</h4>
+                            <p class="text-sm text-gray-500 font-bold">Estampado de nombres</p>
+                        </div>
+
+                        <!-- Fundas / Portas -->
                         <div class="group catalog-item" data-category="eco">
                             <div
-                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-100 shadow-sm border border-gray-100 relative">
-                                <img alt="Recycled fabric rolls"
-                                    class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
-                                    src="https://lh3.googleusercontent.com/aida-public/AB6AXuCjV7jjdtGmWB1umrNlsB41sg5c6YrSXmUn6cN1Ab3DXtY2pC1s4vGB51bW3DltapKy1LTWNUvJZQ8nLEUW-2GcFy6NkqyUnXjEOM55keWqk8K6IMbU6tJ7OWlKopNFTIC7P1D2-3iTodu2Xvvq6jNOF-bGj_pIR5YF27BVaFzU2t9IECYXxAFlaJkevB5iWNpO9tjvAr5AJKEPEmCHBSpN0q0mpKxFnLSeznkRLihuWGvqlKaPEK6OCzomiopvaa2WB4m-wkqqyaA" />
+                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-50 shadow-sm border border-gray-100 relative p-8 flex items-center justify-center">
+                                <img alt="Porta iPad Abierto"
+                                    class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-700 mixture-multiply"
+                                    src="/images/Productos Ecoaid/porta-ipad-abierto.svg" />
                             </div>
-                            <h4 class="font-bold text-xl mb-1 text-text">Textiles Industriales</h4>
-                            <p class="text-sm text-gray-500 font-bold">Uniformes sostenibles de alto tráfico</p>
+                            <h4 class="font-bold text-xl mb-1 text-text">Porta iPad</h4>
+                            <p class="text-sm text-gray-500 font-bold">Diseño abierto funcional</p>
+                        </div>
+
+                        <div class="group catalog-item" data-category="eco">
+                            <div
+                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-50 shadow-sm border border-gray-100 relative p-8 flex items-center justify-center">
+                                <img alt="Portalaptop Grande Multicolor"
+                                    class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-700 mixture-multiply"
+                                    src="/images/Productos Ecoaid/portalap-grande-diseno-multicolor.svg" />
+                            </div>
+                            <h4 class="font-bold text-xl mb-1 text-text">Funda Laptop Grande</h4>
+                            <p class="text-sm text-gray-500 font-bold">Diseño multicolor vibrante</p>
+                        </div>
+
+                        <div class="group catalog-item" data-category="eco">
+                            <div
+                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-50 shadow-sm border border-gray-100 relative p-8 flex items-center justify-center">
+                                <img alt="Portalaptop Chica La Red"
+                                    class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-700 mixture-multiply"
+                                    src="/images/Productos Ecoaid/portalap-chica-la-red-de-la-gente.svg" />
+                            </div>
+                            <h4 class="font-bold text-xl mb-1 text-text">Funda Laptop Chica</h4>
+                            <p class="text-sm text-gray-500 font-bold">Edición La Red de la Gente</p>
+                        </div>
+
+                        <!-- Textiles -->
+                        <div class="group catalog-item" data-category="bolsas">
+                            <div
+                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-50 shadow-sm border border-gray-100 relative p-8 flex items-center justify-center">
+                                <img alt="Muestrario Textiles Ecoaid"
+                                    class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-700 mixture-multiply"
+                                    src="/images/Productos Ecoaid/textiles-ecoaid-muestrario.svg" />
+                            </div>
+                            <h4 class="font-bold text-xl mb-1 text-text">Muestrario Textil</h4>
+                            <p class="text-sm text-gray-500 font-bold">Variedad de texturas y colores</p>
+                        </div>
+
+                        <div class="group catalog-item" data-category="eco">
+                            <div
+                                class="rounded-large overflow-hidden mb-6 aspect-square bg-gray-50 shadow-sm border border-gray-100 relative p-8 flex items-center justify-center">
+                                <img alt="Portalaptop Grande Azul"
+                                    class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-700 mixture-multiply"
+                                    src="/images/Productos Ecoaid/portalap-grande-diseno-azul.svg" />
+                            </div>
+                            <h4 class="font-bold text-xl mb-1 text-text">Funda Laptop Azul</h4>
+                            <p class="text-sm text-gray-500 font-bold">Diseño geométrico</p>
                         </div>
                     </div>
                 </section>
